<resources>
    <string name="app_name">Food From Home</string>
    <string name="app_slogon">Food for You, with Love</string>
    <string name="login_email">Email (Regular and FB Login)</string>
    <string name="login_password">Password</string>
    <string name="sample_email">abc@gmail.com</string>
    <string name="sample_pass">abc123</string>
    <string name="login_button">Log In</string>
    <string name="login_new">New User?</string>
    <string name="login_register">Register</string>
    <string name="login_register_fb">Register Using Facebook</string>
    <string name="register_user">User Registration</string>
    <string name="profile_user">User Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_contact">Mobile</string>
    <string name="country_code">+91</string>
    <string name="profile_community">Community</string>
    <string name="profile_final">Finish Profile</string>
    <string name="home_welcome">Welcome!</string>
    <string name="sample_user">XYZ</string>
    <string name="sample_mobile">1234567890</string>
    <string name="sample_community">Cosmos</string>
    <string name="home_orders">Your current task:</string>
    <string name="new_task">New Delivery Task</string>
    <string name="new_meal">Upload Meal</string>
    <string name="get_delivery">Get Delivery</string>
    <string name="make_delivery">Make Delivery</string>
    <string name="create_task">Create Task</string>
    <string name="sign_out">Sign Out</string>
    <string name="meal_recipe">Recipe</string>
    <string name="meal_size">Packet Size</string>
    <string name="meal_small">Small</string>
    <string name="meal_medium">Medium</string>
    <string name="meal_large">Large</string>
    <string name="back">Back</string>
    <string name="recipe">Recipe:</string>
    <string name="delivery">Delivery Info:</string>
    <string name="receiver">Deliver To:</string>
    <string name="location">Location:</string>
    <string name="eta">ETA:</string>
    <string name="otp">OTP:</string>
    <string name="cost">Cost(Rs):</string>
    <string name="regular">Regular Delivery</string>
    <string name="finish">Finish</string>
    <string name="facebook_app_id">174926096915509</string>
    <string name="fb_login_protocol_scheme">fb174926096915509</string>
    <string name="or">OR</string>
    <string name="detect">Detect</string>
    <string name="nearby">Find Nearby</string>
    <string name="removeRegs">Remove Regulars</string>
    <string name="loginInstruction">Email mandatory for Facebook login</string>
    <string name="menu">Menu</string>
    <string name="history">History</string>
    <string name="history_user">User History</string>
</resources>
